test to see if this fixes fax being weird on mobile footer

--- a/css/root-styles.css
+++ b/css/root-styles.css
@@ -1325,6 +1325,7 @@ footer {
 
 .footer-location-info p {
     width: 220px;
+    display: block;
 }
 
 .footer-item h3 {
